# campello_renderer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  RENDERER_REFACTOR_PLAN.md  TODO.md  build_ios_example.sh  build_macos_example.sh  build_metal_shaders.sh  build_vulkan_shaders.sh  campello_gpu.cmake  gltf.cmake  launch_test.sh  run_macos_example_debug.sh  run_macos_example_release.sh
.github/workflows/: README.md  build.yml  code-quality.yml  release.yml
dependencies/: campello_gpu.cmake  campello_image.cmake  gltf.cmake  googletest.cmake  webp.cmake
examples/android/: settings.gradle.kts
examples/android/app/: build.gradle.kts
examples/android/app/src/androidTest/java/systems/leal/gpu/test/: ExampleInstrumentedTest.kt
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/cpp/: CMakeLists.txt  campello.cmake  campello_gpu.cmake  campello_renderer.cmake  main.cpp
examples/android/app/src/main/java/systems/leal/gpu/test/: MainActivity.kt
examples/android/app/src/main/res/values/: strings.xml  themes.xml
examples/android/app/src/main/res/values-night/: themes.xml
examples/android/app/src/test/java/systems/leal/gpu/test/: ExampleUnitTest.kt
examples/android/gradle/: libs.versions.toml
examples/android/gradle/wrapper/: gradle-wrapper.properties
examples/apple/campello_test/campello_test Shared/: Renderer.h  Renderer.mm  ShaderTypes.h  Shaders.metal
examples/apple/campello_test/campello_test iOS/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  main.m
examples/apple/campello_test/campello_test macOS/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  main.m
examples/apple/campello_test/campello_test macOS/Base.lproj/: Main.storyboard
examples/apple/campello_test/campello_test.xcodeproj/: project.pbxproj
examples/apple/campello_test/campello_test.xcodeproj/project.xcworkspace/xcuserdata/rubenleal.xcuserdatad/: UserInterfaceState.xcuserstate
examples/apple/campello_test/campello_test.xcodeproj/xcuserdata/rubenleal.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/ios/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  Camera.hpp  Info.plist  ViewController.h  ViewController.mm  main.mm
examples/macos/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  Info.plist  ViewController.h  ViewController.mm  main.mm
inc/campello/: campello.hpp
inc/campello_renderer/: animation.hpp  campello.hpp  campello_renderer.hpp  ecs.hpp  image.hpp  procedural_texture_baker.hpp
inc/gpu/: buffer.hpp  buffer_usage.hpp  context.hpp  device.hpp  feature.hpp  pipeline.hpp  pixel_format.hpp  render_pass.hpp  state.hpp  storage_mode.hpp  swap_chain.hpp  texture.hpp  texture_usage.hpp  usage_mode.hpp
shaders/directx/: default.hlsl
shaders/metal/: default.metal
shaders/vulkan/: default.frag  default.vert  downsample.frag  fxaa.frag  fxaa.vert  procedural_bake.comp
src/: animation.cpp  campello.cpp  campello_renderer.cpp  campello_renderer_config.h.in  procedural_texture_baker.cpp
src/campello/: CMakeLists.txt  campello_gpu.cmake
src/gpu/directx/: CMakeLists.txt  build.bat  device.cpp
src/gpu/metal/: Metal.hpp  buffer.cpp  context.cpp  device.cpp  texture.cpp
src/gpu/vulkan/: device.cpp
src/gpu/vulkan_android/: CMakeLists.txt  context.cpp  device.cpp
src/shaders/: directx_default.h  metal_default.h  vulkan_default.h
test/: main.cpp
